Add html elements layout to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,98 @@
 		<title>Ryan Bell Portfolio</title>
 	</head>
 	<body>
-        
-    </body>
+		<div id='container'>
+			<div id='header'>
+				<div id='header-photo'></div>
+				<div id='about'>
+					<div id='header-title'></div>
+					<div id='header-description'></div>
+					<div id='header-links'></div>
+				</div>
+			</div>
+			<div id='content'>
+				<div id='title'></div>
+				<div id='work'>
+					<div class='project'>
+						<div class='photo'></div>
+						<div class='info'>
+							<div class='top'>
+								<div class='name'></div>
+								<div class='github'></div>
+								<div class='link'></div>
+							</div>
+							<div class='description'></div>
+						</div>
+					</div>
+					<div class='project'>
+						<div class='photo'></div>
+						<div class='info'>
+							<div class='top'>
+								<div class='name'></div>
+								<div class='github'></div>
+								<div class='link'></div>
+							</div>
+							<div class='description'></div>
+						</div>
+					</div>
+					<div class='project'>
+						<div class='photo'></div>
+						<div class='info'>
+							<div class='top'>
+								<div class='name'></div>
+								<div class='github'></div>
+								<div class='link'></div>
+							</div>
+							<div class='description'></div>
+						</div>
+					</div>
+					<div class='project'>
+						<div class='photo'></div>
+						<div class='info'>
+							<div class='top'>
+								<div class='name'></div>
+								<div class='github'></div>
+								<div class='link'></div>
+							</div>
+							<div class='description'></div>
+						</div>
+					</div>
+					<div class='project'>
+						<div class='photo'></div>
+						<div class='info'>
+							<div class='top'>
+								<div class='name'></div>
+								<div class='github'></div>
+								<div class='link'></div>
+							</div>
+							<div class='description'></div>
+						</div>
+					</div>
+					<div class='project'>
+						<div class='photo'></div>
+						<div class='info'>
+							<div class='top'>
+								<div class='name'></div>
+								<div class='github'></div>
+								<div class='link'></div>
+							</div>
+							<div class='description'></div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div id='footer'>
+				<div id='contact'>
+					<div id='contact-title'></div>
+					<div id='contact-info'>
+						<div id='contact-note'></div>
+						<div id='phone'></div>
+						<div id='email'></div>
+						<div id='contact-links'></div>
+					</div>
+				</div>
+				<div id='footer-photo'></div>
+			</div>
+		</div>
+	</body>
 </html>
