Align and justify content, add margins and padding to layout

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<div class='photo'></div>
 						<div class='info'>
 							<div class='top'>
-								<div class='name'></div>
+								<div class='name'>To-Do List</div>
 								<div class='github'></div>
 								<div class='link'></div>
 							</div>
@@ -35,7 +35,7 @@
 						<div class='photo'></div>
 						<div class='info'>
 							<div class='top'>
-								<div class='name'></div>
+								<div class='name'>Doodle Nicknames</div>
 								<div class='github'></div>
 								<div class='link'></div>
 							</div>
@@ -46,7 +46,7 @@
 						<div class='photo'></div>
 						<div class='info'>
 							<div class='top'>
-								<div class='name'></div>
+								<div class='name'>Weather App</div>
 								<div class='github'></div>
 								<div class='link'></div>
 							</div>
@@ -57,7 +57,7 @@
 						<div class='photo'></div>
 						<div class='info'>
 							<div class='top'>
-								<div class='name'></div>
+								<div class='name'>Calculator</div>
 								<div class='github'></div>
 								<div class='link'></div>
 							</div>
@@ -68,7 +68,7 @@
 						<div class='photo'></div>
 						<div class='info'>
 							<div class='top'>
-								<div class='name'></div>
+								<div class='name'>Tic Tac Toe</div>
 								<div class='github'></div>
 								<div class='link'></div>
 							</div>
@@ -79,7 +79,7 @@
 						<div class='photo'></div>
 						<div class='info'>
 							<div class='top'>
-								<div class='name'></div>
+								<div class='name'>Tic Tac Toe</div>
 								<div class='github'></div>
 								<div class='link'></div>
 							</div>
