Add text to index.html

--- a/index.html
+++ b/index.html
@@ -1,104 +1,110 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 	<head>
-		<meta charset='UTF-8' />
-		<meta http-equiv='X-UA-Compatible' content='IE=edge' />
-		<meta name='viewport' content='width=device-width, initial-scale=1.0' />
-		<link rel='stylesheet' href='style.css' />
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="style.css" />
 		<title>Ryan Bell Portfolio</title>
 	</head>
 	<body>
-		<div id='container'>
-			<div id='header'>
-				<div id='header-photo'></div>
-				<div id='about'>
-					<div id='header-title'></div>
-					<div id='header-description'></div>
-					<div id='header-links'></div>
+		<div id="container">
+			<div id="header">
+				<div id="header-photo">photo here</div>
+				<div id="about">
+					<div id="header-title">About me</div>
+					<div id="header-description">
+						I have been a business owner for over a decade, and am now trying my
+						hand at the tech industry. I am currently working on the Odin
+						Project, and learning JavaScript to become a full-stack software
+						engineer. I have a passion for learning new and difficult things,
+						and I am a self-taugt developer.
+					</div>
+					<div id="header-links">github logo here</div>
 				</div>
 			</div>
-			<div id='content'>
-				<div id='title'></div>
-				<div id='work'>
-					<div class='project'>
-						<div class='photo'></div>
-						<div class='info'>
-							<div class='top'>
-								<div class='name'>To-Do List</div>
-								<div class='github'></div>
-								<div class='link'></div>
+			<div id="content">
+				<div id="title">Odin Projects</div>
+				<div id="work">
+					<div class="project">
+						<div class="photo">photo here</div>
+						<div class="info">
+							<div class="top">
+								<div class="name">To-Do List</div>
+								<div class="github"></div>
+								<div class="link"></div>
 							</div>
-							<div class='description'></div>
+							<div class="description">project description here</div>
 						</div>
 					</div>
-					<div class='project'>
-						<div class='photo'></div>
-						<div class='info'>
-							<div class='top'>
-								<div class='name'>Doodle Nicknames</div>
-								<div class='github'></div>
-								<div class='link'></div>
+					<div class="project">
+						<div class="photo">photo here</div>
+						<div class="info">
+							<div class="top">
+								<div class="name">Doodle Nicknames</div>
+								<div class="github"></div>
+								<div class="link"></div>
 							</div>
-							<div class='description'></div>
+							<div class="description">project description here</div>
 						</div>
 					</div>
-					<div class='project'>
-						<div class='photo'></div>
-						<div class='info'>
-							<div class='top'>
-								<div class='name'>Weather App</div>
-								<div class='github'></div>
-								<div class='link'></div>
+					<div class="project">
+						<div class="photo">photo here</div>
+						<div class="info">
+							<div class="top">
+								<div class="name">Weather App</div>
+								<div class="github"></div>
+								<div class="link"></div>
 							</div>
-							<div class='description'></div>
+							<div class="description">project description here</div>
 						</div>
 					</div>
-					<div class='project'>
-						<div class='photo'></div>
-						<div class='info'>
-							<div class='top'>
-								<div class='name'>Calculator</div>
-								<div class='github'></div>
-								<div class='link'></div>
+					<div class="project">
+						<div class="photo">photo here</div>
+						<div class="info">
+							<div class="top">
+								<div class="name">Calculator</div>
+								<div class="github"></div>
+								<div class="link"></div>
 							</div>
-							<div class='description'></div>
+							<div class="description">project description here</div>
 						</div>
 					</div>
-					<div class='project'>
-						<div class='photo'></div>
-						<div class='info'>
-							<div class='top'>
-								<div class='name'>Tic Tac Toe</div>
-								<div class='github'></div>
-								<div class='link'></div>
+					<div class="project">
+						<div class="photo">photo here</div>
+						<div class="info">
+							<div class="top">
+								<div class="name">Tic Tac Toe</div>
+								<div class="github"></div>
+								<div class="link"></div>
 							</div>
-							<div class='description'></div>
+							<div class="description">project description here</div>
 						</div>
 					</div>
-					<div class='project'>
-						<div class='photo'></div>
-						<div class='info'>
-							<div class='top'>
-								<div class='name'>Tic Tac Toe</div>
-								<div class='github'></div>
-								<div class='link'></div>
+					<div class="project">
+						<div class="photo">photo here</div>
+						<div class="info">
+							<div class="top">
+								<div class="name">Restaurant Page</div>
+								<div class="github"></div>
+								<div class="link"></div>
 							</div>
-							<div class='description'></div>
+							<div class="description">project description here</div>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div id='footer'>
-				<div id='contact'>
-					<div id='contact-title'></div>
-					<div id='contact-info'>
-						<div id='contact-note'></div>
-						<div id='phone'></div>
-						<div id='email'></div>
-						<div id='contact-links'></div>
+			<div id="footer">
+				<div id="contact">
+					<div id="contact-title">Contact me</div>
+					<div id="contact-info">
+						<div id="contact-note">Please contact me for information regarding web/software consulting services!</div>
+						<div id="phone">714-756-3963</div>
+						<div id="email">ryanb_booking@yahoo.com</div>
+						<div id="contact-links">add links here</div>
 					</div>
 				</div>
-				<div id='footer-photo'></div>
+				<div id="footer-photo">photo here</div>
 			</div>
 		</div>
 	</body>
