--- a/index.html
+++ b/index.html
@@ -1,110 +1,128 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="style.css" />
+		<meta charset='UTF-8' />
+		<meta http-equiv='X-UA-Compatible' content='IE=edge' />
+		<meta name='viewport' content='width=device-width, initial-scale=1.0' />
+		<link rel='stylesheet' href='style.css' />
 		<title>Ryan Bell Portfolio</title>
 	</head>
 	<body>
-		<div id="container">
-			<div id="header">
-				<div id="header-photo">photo here</div>
-				<div id="about">
-					<div id="header-title">About me</div>
-					<div id="header-description">
+		<div id='container'>
+			<div id='header'>
+				<div id='header-photo'>photo here</div>
+				<div id='about'>
+					<div id='header-title'>About me</div>
+					<div id='header-description'>
 						I have been a business owner for over a decade, and am now trying my
 						hand at the tech industry. I am currently working on the Odin
 						Project, and learning JavaScript to become a full-stack software
 						engineer. I have a passion for learning new and difficult things,
 						and I am a self-taugt developer.
 					</div>
-					<div id="header-links">github logo here</div>
+					<div id='header-links'>github logo here</div>
 				</div>
 			</div>
-			<div id="content">
-				<div id="title">Odin Projects</div>
-				<div id="work">
-					<div class="project">
-						<div class="photo">photo here</div>
-						<div class="info">
-							<div class="top">
-								<div class="name">To-Do List</div>
-								<div class="github"></div>
-								<div class="link"></div>
+			<div id='content'>
+				<div id='title'>Odin Projects</div>
+				<div id='work'>
+					<div class='project'>
+						<div class='photo'>
+							<img src='to-do-list.png' alt='To-do list app photo' />
+						</div>
+						<div class='info'>
+							<div class='top'>
+								<div class='name'>To-Do List</div>
+								<div class='github'></div>
+								<div class='link'></div>
 							</div>
-							<div class="description">project description here</div>
+							<div class='description'>project description here</div>
 						</div>
 					</div>
-					<div class="project">
-						<div class="photo">photo here</div>
-						<div class="info">
-							<div class="top">
-								<div class="name">Doodle Nicknames</div>
-								<div class="github"></div>
-								<div class="link"></div>
+					<div class='project'>
+						<div class='photo'>
+							<img src='weather-app.png' alt='Weather app photo' />
+						</div>
+						<div class='info'>
+							<div class='top'>
+								<div class='name'>Weather App</div>
+								<div class='github'></div>
+								<div class='link'></div>
 							</div>
-							<div class="description">project description here</div>
+							<div class='description'>project description here</div>
 						</div>
 					</div>
-					<div class="project">
-						<div class="photo">photo here</div>
-						<div class="info">
-							<div class="top">
-								<div class="name">Weather App</div>
-								<div class="github"></div>
-								<div class="link"></div>
+					<div class='project'>
+						<div class='photo'>
+							<img src='library.png' alt='Library app photo' />
+						</div>
+						<div class='info'>
+							<div class='top'>
+								<div class='name'>Library</div>
+								<div class='github'></div>
+								<div class='link'></div>
 							</div>
-							<div class="description">project description here</div>
+							<div class='description'>project description here</div>
 						</div>
 					</div>
-					<div class="project">
-						<div class="photo">photo here</div>
-						<div class="info">
-							<div class="top">
-								<div class="name">Calculator</div>
-								<div class="github"></div>
-								<div class="link"></div>
+					<div class='project'>
+						<div class='photo'>
+							<img src='tic-tac-toe.png' alt='Tic-tac-toe app photo' />
+						</div>
+						<div class='info'>
+							<div class='top'>
+								<div class='name'>Tic Tac To</div>
+								<div class='github'></div>
+								<div class='link'></div>
 							</div>
-							<div class="description">project description here</div>
+							<div class='description'>project description here</div>
 						</div>
 					</div>
-					<div class="project">
-						<div class="photo">photo here</div>
-						<div class="info">
-							<div class="top">
-								<div class="name">Tic Tac Toe</div>
-								<div class="github"></div>
-								<div class="link"></div>
+					<div class='project'>
+						<div class='photo'>
+							<img
+								src='nickname-generator.png'
+								alt='Nickname generator app photo'
+							/>
+						</div>
+						<div class='info'>
+							<div class='top'>
+								<div class='name'>Doodle Nicknames</div>
+								<div class='github'></div>
+								<div class='link'></div>
 							</div>
-							<div class="description">project description here</div>
+							<div class='description'>project description here</div>
 						</div>
 					</div>
-					<div class="project">
-						<div class="photo">photo here</div>
-						<div class="info">
-							<div class="top">
-								<div class="name">Restaurant Page</div>
-								<div class="github"></div>
-								<div class="link"></div>
+					<div class='project'>
+						<div class='photo'>
+                            <img src="battleship.png" alt="Battleship app photo">
+                        </div>
+						<div class='info'>
+							<div class='top'>
+								<div class='name'>Battleship</div>
+								<div class='github'></div>
+								<div class='link'></div>
 							</div>
-							<div class="description">project description here</div>
+							<div class='description'>project description here</div>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div id="footer">
-				<div id="contact">
-					<div id="contact-title">Contact me</div>
-					<div id="contact-info">
-						<div id="contact-note">Please contact me for information regarding web/software consulting services!</div>
-						<div id="phone">714-756-3963</div>
-						<div id="email">ryanb_booking@yahoo.com</div>
-						<div id="contact-links">add links here</div>
+			<div id='footer'>
+				<div id='contact'>
+					<div id='contact-title'>Contact me</div>
+					<div id='contact-info'>
+						<div id='contact-note'>
+							Please contact me for information regarding web/software
+							consulting services!
+						</div>
+						<div id='phone'>714-756-3963</div>
+						<div id='email'>ryanb_booking@yahoo.com</div>
+						<div id='contact-links'>add links here</div>
 					</div>
 				</div>
-				<div id="footer-photo">photo here</div>
+				<div id='footer-photo'>photo here</div>
 			</div>
 		</div>
 	</body>
