Edit photo styling

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
 				<div id='work'>
 					<div class='project'>
 						<div class='photo'>
-							<img src='to-do-list.png' alt='To-do list app photo' />
+							<img
+								class='project-image'
+								src='to-do-list.png'
+								alt='To-do list app photo'
+							/>
 						</div>
 						<div class='info'>
 							<div class='top'>
@@ -41,7 +45,11 @@
 					</div>
 					<div class='project'>
 						<div class='photo'>
-							<img src='weather-app.png' alt='Weather app photo' />
+							<img
+								class='project-image'
+								src='weather-app.png'
+								alt='Weather app photo'
+							/>
 						</div>
 						<div class='info'>
 							<div class='top'>
@@ -54,7 +62,11 @@
 					</div>
 					<div class='project'>
 						<div class='photo'>
-							<img src='library.png' alt='Library app photo' />
+							<img
+								class='project-image'
+								src='library.png'
+								alt='Library app photo'
+							/>
 						</div>
 						<div class='info'>
 							<div class='top'>
@@ -67,7 +79,11 @@
 					</div>
 					<div class='project'>
 						<div class='photo'>
-							<img src='tic-tac-toe.png' alt='Tic-tac-toe app photo' />
+							<img
+								class='project-image'
+								src='tic-tac-toe.png'
+								alt='Tic-tac-toe app photo'
+							/>
 						</div>
 						<div class='info'>
 							<div class='top'>
@@ -81,6 +97,7 @@
 					<div class='project'>
 						<div class='photo'>
 							<img
+								class='project-image'
 								src='nickname-generator.png'
 								alt='Nickname generator app photo'
 							/>
@@ -96,8 +113,12 @@
 					</div>
 					<div class='project'>
 						<div class='photo'>
-                            <img src="battleship.png" alt="Battleship app photo">
-                        </div>
+							<img
+								class='project-image'
+								src='battleship.png'
+								alt='Battleship app photo'
+							/>
+						</div>
 						<div class='info'>
 							<div class='top'>
 								<div class='name'>Battleship</div>
