--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 	<body>
 		<div id='container'>
 			<div id='header'>
-				<div id='header-photo'>photo here</div>
+				<div id='header-photo'>
+					<img id='ryan-photo' src='ryan-photo.JPG' alt='Photo of Ryan' />
+				</div>
 				<div id='about'>
 					<div id='header-title'>About me</div>
 					<div id='header-description'>
