--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 					<img id='ryan-photo' src='ryan-photo.JPG' alt='Photo of Ryan' />
 				</div>
 				<div id='about'>
-					<div id='header-title'>About me</div>
+					<div id='header-title'>Ryan Bell</div>
 					<div id='header-description'>
 						I have been a business owner for over a decade, and am now trying my
 						hand at the tech industry. I am currently working on the Odin
@@ -145,7 +145,9 @@
 						<div id='contact-links'>add links here</div>
 					</div>
 				</div>
-				<div id='footer-photo'>photo here</div>
+				<div id='footer-photo'>
+					<img id=family-photo src='family-snow.jpeg' alt='Family Picture' />
+				</div>
 			</div>
 		</div>
 	</body>
