Add photo and descriptions

--- a/index.html
+++ b/index.html
@@ -42,24 +42,7 @@
 								<div class='github'></div>
 								<div class='link'></div>
 							</div>
-							<div class='description'>project description here</div>
-						</div>
-					</div>
-					<div class='project'>
-						<div class='photo'>
-							<img
-								class='project-image'
-								src='weather-app.png'
-								alt='Weather app photo'
-							/>
-						</div>
-						<div class='info'>
-							<div class='top'>
-								<div class='name'>Weather App</div>
-								<div class='github'></div>
-								<div class='link'></div>
-							</div>
-							<div class='description'>project description here</div>
+							<div class='description'>Allows users to organize projects and important tasks</div>
 						</div>
 					</div>
 					<div class='project'>
@@ -94,6 +77,23 @@
 								<div class='link'></div>
 							</div>
 							<div class='description'>project description here</div>
+						</div>
+					</div>
+                    <div class='project'>
+						<div class='photo'>
+							<img
+								class='project-image'
+								src='weather-app.png'
+								alt='Weather app photo'
+							/>
+						</div>
+						<div class='info'>
+							<div class='top'>
+								<div class='name'>Weather App</div>
+								<div class='github'></div>
+								<div class='link'></div>
+							</div>
+							<div class='description'>Utilizes a weather API to provide current weather information for any city</div>
 						</div>
 					</div>
 					<div class='project'>
