Add descriptions to apps

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								<div class='github'></div>
 								<div class='link'></div>
 							</div>
-							<div class='description'>project description here</div>
+							<div class='description'>Keeps track of book information and updates display when book has been read</div>
 						</div>
 					</div>
 					<div class='project'>
@@ -72,11 +72,11 @@
 						</div>
 						<div class='info'>
 							<div class='top'>
-								<div class='name'>Tic Tac To</div>
+								<div class='name'>Tic Tac Toe</div>
 								<div class='github'></div>
 								<div class='link'></div>
 							</div>
-							<div class='description'>project description here</div>
+							<div class='description'>A two-player game where participants try to score three X's or O's in a row to win</div>
 						</div>
 					</div>
                     <div class='project'>
@@ -110,7 +110,7 @@
 								<div class='github'></div>
 								<div class='link'></div>
 							</div>
-							<div class='description'>project description here</div>
+							<div class='description'>Generates a random nickname for my son out of over 7000+ possible outcomes</div>
 						</div>
 					</div>
 					<div class='project'>
@@ -127,7 +127,7 @@
 								<div class='github'></div>
 								<div class='link'></div>
 							</div>
-							<div class='description'>project description here</div>
+							<div class='description'>A two-player game of war where players attempt to sink their opponent's fleet. Utilizes basic AI features for the computer move logic</div>
 						</div>
 					</div>
 				</div>
