Add github logos

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 		<meta http-equiv='X-UA-Compatible' content='IE=edge' />
 		<meta name='viewport' content='width=device-width, initial-scale=1.0' />
 		<link rel='stylesheet' href='style.css' />
+		<link
+			rel='stylesheet'
+			href='https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css'
+		/>
 		<title>Ryan Bell Portfolio</title>
 	</head>
 	<body>
@@ -22,7 +26,12 @@
 						engineer. I have a passion for learning new and difficult things,
 						and I am a self-taugt developer.
 					</div>
-					<div id='header-links'>github logo here</div>
+					<div id='header-links'>
+						<img
+							class='github-logo'
+							src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original-wordmark.svg'
+						/>
+					</div>
 				</div>
 			</div>
 			<div id='content'>
@@ -39,10 +48,16 @@
 						<div class='info'>
 							<div class='top'>
 								<div class='name'>To-Do List</div>
-								<div class='github'></div>
+								<div class='github'>
+									<img
+										src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
+									/>
+								</div>
 								<div class='link'></div>
 							</div>
-							<div class='description'>Allows users to organize projects and important tasks</div>
+							<div class='description'>
+								Allows users to organize projects and important tasks
+							</div>
 						</div>
 					</div>
 					<div class='project'>
@@ -56,10 +71,17 @@
 						<div class='info'>
 							<div class='top'>
 								<div class='name'>Library</div>
-								<div class='github'></div>
+								<div class='github'>
+									<img
+										src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
+									/>
+								</div>
 								<div class='link'></div>
 							</div>
-							<div class='description'>Keeps track of book information and updates display when book has been read</div>
+							<div class='description'>
+								Keeps track of book information and updates display when book
+								has been read
+							</div>
 						</div>
 					</div>
 					<div class='project'>
@@ -73,13 +95,20 @@
 						<div class='info'>
 							<div class='top'>
 								<div class='name'>Tic Tac Toe</div>
-								<div class='github'></div>
+								<div class='github'>
+									<img
+										src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
+									/>
+								</div>
 								<div class='link'></div>
 							</div>
-							<div class='description'>A two-player game where participants try to score three X's or O's in a row to win</div>
+							<div class='description'>
+								A two-player game where participants try to score three X's or
+								O's in a row to win
+							</div>
 						</div>
 					</div>
-                    <div class='project'>
+					<div class='project'>
 						<div class='photo'>
 							<img
 								class='project-image'
@@ -90,10 +119,17 @@
 						<div class='info'>
 							<div class='top'>
 								<div class='name'>Weather App</div>
-								<div class='github'></div>
+								<div class='github'>
+									<img
+										src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
+									/>
+								</div>
 								<div class='link'></div>
 							</div>
-							<div class='description'>Utilizes a weather API to provide current weather information for any city</div>
+							<div class='description'>
+								Utilizes a weather API to provide current weather information
+								for any city
+							</div>
 						</div>
 					</div>
 					<div class='project'>
@@ -107,10 +143,17 @@
 						<div class='info'>
 							<div class='top'>
 								<div class='name'>Doodle Nicknames</div>
-								<div class='github'></div>
+								<div class='github'>
+									<img
+										src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
+									/>
+								</div>
 								<div class='link'></div>
 							</div>
-							<div class='description'>Generates a random nickname for my son out of over 7000+ possible outcomes</div>
+							<div class='description'>
+								Generates a random nickname for my son out of over 7000+
+								possible outcomes
+							</div>
 						</div>
 					</div>
 					<div class='project'>
@@ -124,10 +167,18 @@
 						<div class='info'>
 							<div class='top'>
 								<div class='name'>Battleship</div>
-								<div class='github'></div>
+								<div class='github'>
+									<img
+										src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
+									/>
+								</div>
 								<div class='link'></div>
 							</div>
-							<div class='description'>A two-player game of war where players attempt to sink their opponent's fleet. Utilizes basic AI features for the computer move logic</div>
+							<div class='description'>
+								A two-player game of war where players attempt to sink their
+								opponent's fleet. Utilizes basic AI features for the computer
+								move logic
+							</div>
 						</div>
 					</div>
 				</div>
@@ -142,11 +193,14 @@
 						</div>
 						<div id='phone'>714-756-3963</div>
 						<div id='email'>ryanb_booking@yahoo.com</div>
-						<div id='contact-links'>add links here</div>
+						<div id='contact-links'>
+							<i class='devicon-github-original'></i>
+							<div id='git-info'>github.com/DinoCzar</div>
+						</div>
 					</div>
 				</div>
 				<div id='footer-photo'>
-					<img id=family-photo src='family-snow.jpeg' alt='Family Picture' />
+					<img id='family-photo' src='family-snow.jpeg' alt='Family Picture' />
 				</div>
 			</div>
 		</div>
