--- a/index.html
+++ b/index.html
@@ -53,7 +53,13 @@
 										src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
 									/>
 								</div>
-								<div class='link'></div>
+								<div class='link'>
+									<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'>
+										<path
+											d='M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z'
+										/>
+									</svg>
+								</div>
 							</div>
 							<div class='description'>
 								Allows users to organize projects and important tasks
@@ -76,7 +82,13 @@
 										src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
 									/>
 								</div>
-								<div class='link'></div>
+								<div class='link'>
+									<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'>
+										<path
+											d='M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z'
+										/>
+									</svg>
+								</div>
 							</div>
 							<div class='description'>
 								Keeps track of book information and updates display when book
@@ -100,7 +112,13 @@
 										src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
 									/>
 								</div>
-								<div class='link'></div>
+								<div class='link'>
+									<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'>
+										<path
+											d='M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z'
+										/>
+									</svg>
+								</div>
 							</div>
 							<div class='description'>
 								A two-player game where participants try to score three X's or
@@ -124,7 +142,13 @@
 										src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
 									/>
 								</div>
-								<div class='link'></div>
+								<div class='link'>
+									<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'>
+										<path
+											d='M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z'
+										/>
+									</svg>
+								</div>
 							</div>
 							<div class='description'>
 								Utilizes a weather API to provide current weather information
@@ -148,7 +172,13 @@
 										src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
 									/>
 								</div>
-								<div class='link'></div>
+								<div class='link'>
+									<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'>
+										<path
+											d='M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z'
+										/>
+									</svg>
+								</div>
 							</div>
 							<div class='description'>
 								Generates a random nickname for my son out of over 7000+
@@ -172,7 +202,13 @@
 										src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
 									/>
 								</div>
-								<div class='link'></div>
+								<div class='link'>
+									<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'>
+										<path
+											d='M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z'
+										/>
+									</svg>
+								</div>
 							</div>
 							<div class='description'>
 								A two-player game of war where players attempt to sink their
