--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div id='container'>
 			<div id='header'>
 				<div id='header-photo'>
-					<img id='ryan-photo' src='ryan-photo.JPG' alt='Photo of Ryan' />
+					<img id='ryan-photo' src='images/ryan-photo.JPG' alt='Photo of Ryan' />
 				</div>
 				<div id='about'>
 					<div id='header-title'>Ryan Bell</div>
@@ -41,7 +41,7 @@
 						<div class='photo'>
 							<img
 								class='project-image'
-								src='to-do-list.png'
+								src='images/to-do-list.png'
 								alt='To-do list app photo'
 							/>
 						</div>
@@ -50,11 +50,16 @@
 								<div class='name'>To-Do List</div>
 								<div class='github'>
 									<img
+										class='icons'
 										src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
 									/>
 								</div>
 								<div class='link'>
-									<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'>
+									<svg
+										class='icons'
+										xmlns='http://www.w3.org/2000/svg'
+										viewBox='0 0 24 24'
+									>
 										<path
 											d='M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z'
 										/>
@@ -70,7 +75,7 @@
 						<div class='photo'>
 							<img
 								class='project-image'
-								src='library.png'
+								src='images/library.png'
 								alt='Library app photo'
 							/>
 						</div>
@@ -79,11 +84,16 @@
 								<div class='name'>Library</div>
 								<div class='github'>
 									<img
+										class='icons'
 										src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
 									/>
 								</div>
 								<div class='link'>
-									<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'>
+									<svg
+										class='icons'
+										xmlns='http://www.w3.org/2000/svg'
+										viewBox='0 0 24 24'
+									>
 										<path
 											d='M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z'
 										/>
@@ -100,7 +110,7 @@
 						<div class='photo'>
 							<img
 								class='project-image'
-								src='tic-tac-toe.png'
+								src='images/tic-tac-toe.png'
 								alt='Tic-tac-toe app photo'
 							/>
 						</div>
@@ -109,11 +119,16 @@
 								<div class='name'>Tic Tac Toe</div>
 								<div class='github'>
 									<img
+										class='icons'
 										src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
 									/>
 								</div>
 								<div class='link'>
-									<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'>
+									<svg
+										class='icons'
+										xmlns='http://www.w3.org/2000/svg'
+										viewBox='0 0 24 24'
+									>
 										<path
 											d='M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z'
 										/>
@@ -130,7 +145,7 @@
 						<div class='photo'>
 							<img
 								class='project-image'
-								src='weather-app.png'
+								src='images/weather-app.png'
 								alt='Weather app photo'
 							/>
 						</div>
@@ -139,11 +154,16 @@
 								<div class='name'>Weather App</div>
 								<div class='github'>
 									<img
+										class='icons'
 										src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
 									/>
 								</div>
 								<div class='link'>
-									<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'>
+									<svg
+										class='icons'
+										xmlns='http://www.w3.org/2000/svg'
+										viewBox='0 0 24 24'
+									>
 										<path
 											d='M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z'
 										/>
@@ -160,7 +180,7 @@
 						<div class='photo'>
 							<img
 								class='project-image'
-								src='nickname-generator.png'
+								src='images/nickname-generator.png'
 								alt='Nickname generator app photo'
 							/>
 						</div>
@@ -169,11 +189,16 @@
 								<div class='name'>Doodle Nicknames</div>
 								<div class='github'>
 									<img
+										class='icons'
 										src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
 									/>
 								</div>
 								<div class='link'>
-									<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'>
+									<svg
+										class='icons'
+										xmlns='http://www.w3.org/2000/svg'
+										viewBox='0 0 24 24'
+									>
 										<path
 											d='M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z'
 										/>
@@ -190,7 +215,7 @@
 						<div class='photo'>
 							<img
 								class='project-image'
-								src='battleship.png'
+								src='images/battleship.png'
 								alt='Battleship app photo'
 							/>
 						</div>
@@ -198,16 +223,25 @@
 							<div class='top'>
 								<div class='name'>Battleship</div>
 								<div class='github'>
-									<img
-										src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
-									/>
+									<a href='https://github.com/DinoCzar/battleship'>
+										<img
+											class='icons'
+											src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
+										/>
+									</a>
 								</div>
 								<div class='link'>
-									<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'>
-										<path
-											d='M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z'
-										/>
-									</svg>
+									<a href='https://dinoczar.github.io/battleship/'>
+										<svg
+											class='icons'
+											xmlns='http://www.w3.org/2000/svg'
+											viewBox='0 0 24 24'
+										>
+											<path
+												d='M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z'
+											/>
+										</svg>
+									</a>
 								</div>
 							</div>
 							<div class='description'>
@@ -267,7 +301,7 @@
 					</div>
 				</div>
 				<div id='footer-photo'>
-					<img id='family-photo' src='family-snow.jpeg' alt='Family Picture' />
+					<img id='family-photo' src='images/family-snow.jpeg' alt='Family Picture' />
 				</div>
 			</div>
 		</div>
