Add links to icons

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 		<div id='container'>
 			<div id='header'>
 				<div id='header-photo'>
-					<img id='ryan-photo' src='images/ryan-photo.JPG' alt='Photo of Ryan' />
+					<img
+						id='ryan-photo'
+						src='images/ryan-photo.JPG'
+						alt='Photo of Ryan'
+					/>
 				</div>
 				<div id='about'>
 					<div id='header-title'>Ryan Bell</div>
@@ -49,21 +53,25 @@
 							<div class='top'>
 								<div class='name'>To-Do List</div>
 								<div class='github'>
-									<img
-										class='icons'
-										src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
-									/>
+									<a href='https://github.com/DinoCzar/to-do-list'>
+										<img
+											class='icons'
+											src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
+										/>
+									</a>
 								</div>
 								<div class='link'>
-									<svg
-										class='icons'
-										xmlns='http://www.w3.org/2000/svg'
-										viewBox='0 0 24 24'
-									>
-										<path
-											d='M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z'
-										/>
-									</svg>
+									<a href='https://dinoczar.github.io/to-do-list/'>
+										<svg
+											class='icons'
+											xmlns='http://www.w3.org/2000/svg'
+											viewBox='0 0 24 24'
+										>
+											<path
+												d='M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z'
+											/>
+										</svg>
+									</a>
 								</div>
 							</div>
 							<div class='description'>
@@ -83,21 +91,25 @@
 							<div class='top'>
 								<div class='name'>Library</div>
 								<div class='github'>
-									<img
-										class='icons'
-										src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
-									/>
+									<a href='https://github.com/DinoCzar/library'>
+										<img
+											class='icons'
+											src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
+										/>
+									</a>
 								</div>
 								<div class='link'>
-									<svg
-										class='icons'
-										xmlns='http://www.w3.org/2000/svg'
-										viewBox='0 0 24 24'
-									>
-										<path
-											d='M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z'
-										/>
-									</svg>
+									<a href='https://dinoczar.github.io/library/'>
+										<svg
+											class='icons'
+											xmlns='http://www.w3.org/2000/svg'
+											viewBox='0 0 24 24'
+										>
+											<path
+												d='M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z'
+											/>
+										</svg>
+									</a>
 								</div>
 							</div>
 							<div class='description'>
@@ -118,21 +130,25 @@
 							<div class='top'>
 								<div class='name'>Tic Tac Toe</div>
 								<div class='github'>
-									<img
-										class='icons'
-										src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
-									/>
+									<a href='https://github.com/DinoCzar/tic-tac-toe'>
+										<img
+											class='icons'
+											src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
+										/>
+									</a>
 								</div>
 								<div class='link'>
-									<svg
-										class='icons'
-										xmlns='http://www.w3.org/2000/svg'
-										viewBox='0 0 24 24'
-									>
-										<path
-											d='M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z'
-										/>
-									</svg>
+									<a href='https://dinoczar.github.io/tic-tac-toe/'>
+										<svg
+											class='icons'
+											xmlns='http://www.w3.org/2000/svg'
+											viewBox='0 0 24 24'
+										>
+											<path
+												d='M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z'
+											/>
+										</svg>
+									</a>
 								</div>
 							</div>
 							<div class='description'>
@@ -153,21 +169,25 @@
 							<div class='top'>
 								<div class='name'>Weather App</div>
 								<div class='github'>
-									<img
-										class='icons'
-										src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
-									/>
+									<a href='https://github.com/DinoCzar/weather-app'>
+										<img
+											class='icons'
+											src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
+										/>
+									</a>
 								</div>
 								<div class='link'>
-									<svg
-										class='icons'
-										xmlns='http://www.w3.org/2000/svg'
-										viewBox='0 0 24 24'
-									>
-										<path
-											d='M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z'
-										/>
-									</svg>
+									<a href='https://dinoczar.github.io/weather-app/'>
+										<svg
+											class='icons'
+											xmlns='http://www.w3.org/2000/svg'
+											viewBox='0 0 24 24'
+										>
+											<path
+												d='M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z'
+											/>
+										</svg>
+									</a>
 								</div>
 							</div>
 							<div class='description'>
@@ -188,21 +208,25 @@
 							<div class='top'>
 								<div class='name'>Doodle Nicknames</div>
 								<div class='github'>
-									<img
-										class='icons'
-										src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
-									/>
+									<a href='https://github.com/DinoCzar/doodle-nicknames'>
+										<img
+											class='icons'
+											src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
+										/>
+									</a>
 								</div>
 								<div class='link'>
-									<svg
-										class='icons'
-										xmlns='http://www.w3.org/2000/svg'
-										viewBox='0 0 24 24'
-									>
-										<path
-											d='M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z'
-										/>
-									</svg>
+									<a href='https://dinoczar.github.io/doodle-nicknames/'>
+										<svg
+											class='icons'
+											xmlns='http://www.w3.org/2000/svg'
+											viewBox='0 0 24 24'
+										>
+											<path
+												d='M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z'
+											/>
+										</svg>
+									</a>
 								</div>
 							</div>
 							<div class='description'>
@@ -301,7 +325,11 @@
 					</div>
 				</div>
 				<div id='footer-photo'>
-					<img id='family-photo' src='images/family-snow.jpeg' alt='Family Picture' />
+					<img
+						id='family-photo'
+						src='images/family-snow.jpeg'
+						alt='Family Picture'
+					/>
 				</div>
 			</div>
 		</div>
