Add links to github logo

--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
 						and I am a self-taugt developer.
 					</div>
 					<div id='header-links'>
-						<img
-							class='github-logo'
-							src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original-wordmark.svg'
-						/>
+						<a href='https://github.com/DinoCzar'>
+							<img
+								class='github-logo'
+								src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original-wordmark.svg'
+							/>
+						</a>
 					</div>
 				</div>
 			</div>
@@ -315,10 +317,12 @@
 						</div>
 						<div id='contact-links'>
 							<div class='github-footer'>
-								<img
-									id='github-icon'
-									src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
-								/>
+								<a href='https://github.com/DinoCzar'>
+									<img
+										id='github-icon'
+										src='https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg'
+									/>
+								</a>
 							</div>
 							<div id='git-info'>github.com/DinoCzar</div>
 						</div>
