--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 					<div id='header-description'>
 						I have been a business owner for over a decade, and am now trying my
 						hand at the tech industry. I am currently working on the Odin
-						Project, and learning JavaScript to become a full-stack software
+						Project, and am learning JavaScript to become a full-stack software
 						engineer. I have a passion for learning new and difficult things,
-						and I am a self-taugt developer.
+						and I am a self-taught developer.
 					</div>
 					<div id='header-links'>
 						<a href='https://github.com/DinoCzar'>
